include/dss_capi.h

    /*! 
    Number of Customers in the active section.
    */
    DSS_CAPI_DLL int32_t Meters_Get_NumSectionCustomers(void);
    /*! 
    Type of OCP device. 1=Fuse; 2=Recloser; 3=Relay
    */
    DSS_CAPI_DLL int32_t Meters_Get_OCPDeviceType(void);
    /*! 
    Sum of the branch fault rates in this section of the meter's zone
    */
    DSS_CAPI_DLL double Meters_Get_SumBranchFltRates(void);
    /*! 
    SequenceIndex of the branch at the head of this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_SectSeqIdx(void);
    /*! 
    Total Customers downline from this section
    */
    DSS_CAPI_DLL int32_t Meters_Get_SectTotalCust(void);
    
    /*! 
    Returns the list of all PCE within the area covered by the energy meter
    */
    DSS_CAPI_DLL void Meters_Get_ZonePCE(char*** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL int32_t Meters_Get_idx(void);
    DSS_CAPI_DLL void Meters_Set_idx(int32_t Value);