src/CAPI/CAPI_Meters.pas


    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].NBranches
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_NumSectionCustomers(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
        
    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].NCustomers
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_OCPDeviceType(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;
    
    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].OCPDeviceType
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_SumBranchFltRates(): Double; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0.0;
    if not _activeObj(pMeterObj) then
        Exit;
    
    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].SumBranchFltRates
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_SectSeqIdx(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].SeqIndex
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_SectTotalCust(): Integer; CDECL;
var
    pMeterObj: TEnergyMeterObj;
begin
    Result := 0;
    if not _activeObj(pMeterObj) then
        Exit;

    with pMeterObj do
    begin
        if (ActiveSection > 0) and (ActiveSection <= SectionCount) then
            Result := FeederSections^[ActiveSection].TotalCustomers
        else
            InvalidActiveSection();
    end;
end;
//------------------------------------------------------------------------------
function Meters_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit then
        Exit;
    Result := ActiveCircuit.EnergyMeters.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure Meters_Set_idx(Value: Integer); CDECL;
var
    pEnergyMeter: TEnergyMeterObj;
begin
    if InvalidCircuit then
        Exit;
    pEnergyMeter := ActiveCircuit.EnergyMeters.Get(Value);
    if pEnergyMeter = NIL then
    begin
        DoSimpleMsg('Invalid Meter index: "' + IntToStr(Value) + '".', 656565);
        Exit;
    end;
    ActiveCircuit.ActiveCktElement := pEnergyMeter;
end;
//------------------------------------------------------------------------------
procedure Meters_Get_ZonePCE(var ResultPtr: PPAnsiChar; ResultCount: PAPISize); CDECL;
var
   pMeter: TEnergyMeterObj;
   k: integer;
   Result: PPAnsiCharArray;
begin
    DefaultResult(ResultPtr, ResultCount, '');
    if InvalidCircuit then
        Exit;

    pMeter := ActiveCircuit.EnergyMeters.Active;
    if pMeter = nil then 
        Exit;

    pMeter.GetPCEatZone(True);
    
    if not ((Length(pMeter.ZonePCE) > 0) and (pMeter.ZonePCE[0] <> '')) then
        Exit;
        
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, length(pMeter.ZonePCE));
    for k := 0 to High(pMeter.ZonePCE) do
        Result[k] := DSS_CopyStringAsPChar(pMeter.ZonePCE[k]);
end;
//------------------------------------------------------------------------------
end.
